Completed the styling of the recipe page

--- a/index.html
+++ b/index.html
@@ -26,20 +26,24 @@
                     </ul>
                 </div> 
             </div>
+        </div>
     </header>
     <section id="recipes">
         <h2>My Favorite Recipes</h2>
-        <div class="recipe">
+        <div class="recipe-card">
             <h3>Spaghetti Bolognese</h3>
             <p>A classic Italian pasta dish with a rich meat sauce.</p>
+            <img src="./img/spaghetti-bolognese-recipe.jpg" alt="Spaghetti Bolognese">
         </div>
-        <div class="recipe">
+        <div class="recipe-card">
             <h3>Chicken Curry</h3>
             <p>A spicy and flavorful dish made with chicken and aromatic spices.</p>
+            <img src="./img/chicken-curry.jpeg" alt="Chicken Curry">
         </div>
-        <div class="recipe">
+        <div class="recipe-card">
             <h3>Vegetable Stir Fry</h3>
             <p>A quick and healthy dish made with a variety of fresh vegetables.</p>
+            <img src="./img/stirfried-vegetables.jpg" alt="stir fried vegetables">  
         </div>
     </section>
     <section id="about">
